<resources>
    <string name="none"/>
    <string name="app_name">51金融圈</string>
    <string name="isShowing">no</string>
    <string name="save">保存</string>
    <string name="create">创建</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="submit">提交</string>
    <string name="logout">注销</string>
    <string name="logout_success">注销成功</string>
    <string name="email_en">Email</string>
    <string name="email_zh">邮箱</string>
    <string name="reg_email">注册邮箱</string>
    <string name="password_old">旧密码</string>
    <string name="password_new">新密码</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="input_required">输入框为必填项</string>
    <string name="password_min_length">6</string>
    <string name="password_max_length">20</string>
    <string name="password_length_required">密码为6-20位字符组成</string>
    <string name="source">来源/</string>
    <string name="author">作者/</string>
    <string name="opt_delete">删除</string>
    <string name="opt_edit">编辑</string>
    <string name="opt_finish">完成</string>
    <string name="opt_success">操作成功</string>
    <string name="opt_failure">操作失败</string>
    <string name="confirm_delete">你确定要删除吗？</string>
    <string name="confirm_logout">你确定要注销吗？</string>
    <string name="city_chooser">选择地区</string>
    <string name="login_email_hit">请输入您的邮箱</string>
    <string name="login_register">赶快去注册吧!</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="city_chooser_current_city">当前城市</string>
    <string name="city_chooser_all_cities">热门城市</string>
    <string name="register_email_hit">您常用的Email</string>
    <string name="password_type">6-20位数字字母区分大小写</string>
    <string name="repeat_input_password">再次输入密码</string>
    <string name="check_email_cannot_empty">电子邮件不能为空</string>
    <string name="check_password_cannot_empty">密码不能为空</string>
    <string name="application_config_error">应用环境配置错误！！！</string>
    <string name="nologin_error">请首先登陆</string>
    <string name="network_error">网络出错</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full"/>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <string name="industry">行业</string>
    <string name="perfect">完整</string>
    <string name="imperfect">不完整</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="checkcode">验证码</string>
    <string name="checkcode_get">获取验证码</string>
    <string name="reset_password_email_hit">请输入找回密码邮箱</string>
    <string name="email_checkcode_hit">邮箱验证码</string>
    <string name="activity_user_home_name">个人中心</string>
    <string name="btn_corpjob">企业职位</string>
    <string name="btn_myresume">我的简历</string>
    <string name="btn_hunterjob">猎头职位</string>
    <string name="btn_news">金融快讯</string>
    <string name="btn_more">更多...</string>
    <string name="btn_selection">评选</string>
    <string name="topbar_homepage">金领圈</string>
    <string name="topbar_other">更多</string>
    <string name="bottombar_offer_url">http://10.12.0.110:8090/vita/api/h5/C0001</string>
    <string name="message_collect">收件箱</string>
    <string name="message_nocontent">收件箱尚未有记录</string>
    <string name="message_return_lang">我</string>
    <string name="message_return">回复列表</string>
    <string name="message_send">私信回复</string>
    <string name="opt_send">发送</string>
    <string name="opt_return">回复</string>
    <string name="no_read">未读</string>
    <string name="has_read">已读</string>
    <string name="other_aboutus">关于我们</string>
    <string name="other_versioncheck">版本升级</string>
    <string name="other_versioncheck_downloadnew">下载最新版本</string>
    <string name="other_versioncheck_currentisnew">目前已经是最新版本</string>
    <string name="other_contact">意见反馈</string>
    <string name="other_aboutus_title">金融圈介绍</string>
    <string name="other_aboutus_description">“金领圈”（finance）是针对高端金融人事量身定做的一款金融求职软件，是国际集多种媒介资源优势的金融专业人力资源服务机构。\n\n        它集合了传统媒体，网络媒体以及先进的信息技术，加一支经验丰富的专业顾问队伍，提供包括招聘猎头，培训测评和人事外包在内的全方位专业人力资源服务。\n\n        金领圈作为新生的金融求职网站，它借鉴了最成熟具备代表性的的信息技术，金领圈力求做到金融求职行业的最专业的网站APP,随之是逐步拥有数百万高端求职者的合适的工作机会和职业发展的机会。\n\n        伴随海银即将上市，金领圈将逐步成长为中国国际最具影响力的金融人力资源服务供应商。</string>
    <string name="other_contact_title">欢迎提出宝贵意见和建议，您的反馈将用来改善软件，我们会在第一时间联系到您</string>
    <string name="other_contact_send">发送</string>
    <string name="other_contact_email_hit">请输入您的email地址</string>
    <string name="other_contact_description_hit">请输入您反馈的意见 (600字以内)</string>
    <string name="news_details">内容详情</string>
    <string name="news_policy">政策法规</string>
    <string name="news_policy_addnew">新增</string>
    <string name="news_disclaimer">免责声明</string>
    <string name="news_disclaimer_title">版权与免责声明</string>
    <string name="news_disclaimer_description">金领圈是金融精英求职专题网站。本网发布与转载站内所有资料是为了打造金融人首选求职平台,网站诚邀金融精英名企猎头加盟。 \n\n 一、凡本网注明“稿件来源：金领圈”等声明版权的所有文字、图片和音视频稿件，版权均属本网站所有。 \n\n 二、任何单位和个人认为通过金领圈包含的内容可能涉嫌侵犯其合法权益，应及时向金领圈进行书面反馈，并提供其身份证明、权属证明及详细侵权情况的说明，金领圈在收到上述法律文件后，将会立即移除被控侵权内容。\n\n 三、因网络状况、通讯线路等非人控技术原因而导致用户不能正常使用金领圈，金领圈不承担任何法律责任。金领圈首页面/各栏目子页面及标志均为金领圈编辑部所持有的注册备案，并保留了其所拥有的权利。以上内容最终解释权归金领圈编辑部所有。</string>
    <string name="user_center_apply_info">职位申请记录</string>
    <string name="user_center_job_favorite">职位收藏夹</string>
    <string name="user_center_resume_refresh">刷新简历</string>
    <string name="user_center_changed_password">更改密码</string>
    <string name="user_center_register_email">注册Email:</string>
    <string name="user_center_apply_info_nocontent">尚未收藏职位申请记录</string>
    <string name="user_center_apply_info_header_text">职位申请记录为你保存60日内记录查询，超出期限数据会自动更新</string>
    <string name="user_center_apply_info_issue_date">申请日期:</string>
    <string name="jobdescription">岗位要求</string>
    <string name="job_person_number">人数:</string>
    <string name="job_refreshdate">发布:</string>
    <string name="job_jobcity">地区:</string>
    <string name="job_publisher_scope">规模:</string>
    <string name="job_publisher_nature">性质:</string>
    <string name="label_salary">薪水:</string>
    <string name="label_address">地址:</string>
    <string name="changed_password">修改密码</string>
    <string name="reset_password">重置密码</string>
    <string name="favorite">收藏夹</string>
    <string name="apply_info">申请记录</string>
    <string name="job_favorite_header_text">职位收藏夹为你保管近两个月的收藏信息，最多可收藏500条职位信息。</string>
    <string name="apply_job">应聘此岗位</string>
    <string name="choose_resume">选择简历</string>
    <string name="choose_resume2">选择简历:</string>
    <string name="apply_job_pop">您应聘的职位是:</string>
    <string name="deliver_resume">立即应聘</string>
    <string name="please_create_resume_first">请先完善简历</string>
    <string name="your_current_password_hit">您现在的密码</string>
    <string name="twice_input_password_noequal">两次密码输入不同</string>
    <string name="resume_refreshing">正在刷新简历</string>
    <string name="refresh_success">刷新成功</string>
    <string name="job_details">职位详情</string>
    <string name="deliver_not_yet">未投递</string>
    <string name="deliver_already">已投递</string>
    <string name="not_found_any_job">职位列表为空</string>
    <string name="list_filter">筛选</string>
    <string name="comp_city">所在地区</string>
    <string name="comp_industry">所在行业</string>
    <string name="job_salary">月薪范围</string>
    <string name="job_pub_date">发布时间</string>
    <string name="noimpose">不限</string>
    <string name="search">搜索</string>
    <string name="search_result">搜索结果</string>
    <string name="job_overdue">职位已过期</string>
    <string name="no_overdue">2</string>
    <string name="please_input_keywords">请输入关键字</string>
    <string name="national_city">全部</string>
    <string name="all_industry">所有行业</string>
    <string name="resume_create_error">您已经创建过3份简历，额度已满</string>
    <string name="resume_edit">简历编辑</string>
    <string name="resume_refresh">简历刷新</string>
    <string name="resume_preview">简历预览</string>
    <string name="resume_delete">简历删除</string>
    <string name="resume_name">简历名称</string>
    <string name="resume_update">更新:</string>
    <string name="resume_create_colon">创建:</string>
    <string name="resume_create">创建简历</string>
    <string name="resume_finish_percent_colon">简历完整度:</string>
    <string name="resume_finish_percent">简历完整度</string>
    <string name="resume_isopen">公开程度</string>
    <string name="resume_edit_baseinfo_title">必填：只需填写完整即可投递简历</string>
    <string name="resume_edit_otherinfo_title">选填：完善信息让企业对你有更多了解</string>
    <string name="edit_name">修改名称</string>
    <string name="preview_resume">预览简历</string>
    <string name="all_is_open">完全公开</string>
    <string name="work_history">工作经历</string>
    <string name="base_document">修改个人信息</string>
    <string name="base_name">姓名</string>
    <string name="base_sex">性别</string>
    <string name="base_borndate">出生日期</string>
    <string name="base_address">居住地址</string>
    <string name="base_telephone">手机号码</string>
    <string name="base_jobstatus">求职状态</string>
    <string name="base_workyears">工作年限</string>
    <string name="base_salary">目前年薪</string>
    <string name="base_idtype">证件类型</string>
    <string name="base_id">证件号码</string>
    <string name="base_accountcityid">户口</string>
    <string name="choose_hit">请选择</string>
    <string name="check_form_no_whole">请输入未填信息</string>
    <string name="check_begin_end_date">结束日期早于开始日期</string>
    <string name="check_language_is_exist">不能添加重复语言</string>
    <string name="check_telephone">请输入正确的手机号</string>
    <string name="check_idcard">请输入正确的证件号</string>
    <string name="check_date">日期输入有误</string>
    <string name="check_resume_name_length">简历名称长度限定20位</string>
    <string name="save_failure">保存失败</string>
    <string name="add_work_history">添加工作经历</string>
    <string name="add_project_experience">添加项目经验</string>
    <string name="add_education">添加教育经历</string>
    <string name="add_language">添加语言能力</string>
    <string name="work_history_date_lang">到</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="corpname">公司</string>
    <string name="corpscale">公司规模</string>
    <string name="corptype">公司性质</string>
    <string name="department">部门</string>
    <string name="postcode">职位</string>
    <string name="workremark">工作描述</string>
    <string name="jobnature">工作类型</string>
    <string name="postids">期望行业</string>
    <string name="sitecity">期望地点</string>
    <string name="expectsalarycode">期望月薪</string>
    <string name="poststime">到岗时间</string>
    <string name="selfremark">自我评价</string>
    <string name="projectname">项目名称</string>
    <string name="companyname">公司名称</string>
    <string name="projectremark">项目描述</string>
    <string name="trustremark">项目职责</string>
    <string name="projectremark_hit">所在项目描述</string>
    <string name="choose_intro_background">活动背景介绍</string>
    <string name="choose_intro_background_content">为满足中国企业家、创业者、投资人，以及社会公众日益迫切的理财需求，关注并引导中国财富管理行业的健康发展，并为活跃在一线的优秀理财师提供 展示才华的舞台，世界著名财经杂志《福布斯》中文版携手富国基金管理有限公司，连续第六年合作举办“福布斯•富国2014中国优选理财师评选”活动。活动 期望为中国企业家、创业者、投资人等财富人士与专业理财顾问间搭建对话平台，并为促进中国本土理财行业发展以及更多优秀理财师的发掘而更添助力。 秉承《福布斯》中文版权威的视角和公开公平的原则，在2014年评选中，主办方联合港台和中国大陆财富管理领域的多方力量，集结各大学术机构顶尖专 家学者，成立“福布斯•富国2014中国优选理财师评选”专家评审委员会，为本届评选活动提供专家支持。</string>
    <string name="choose_intro_target">活动目标</string>
    <string name="choose_intro_target_content">树立“理财是一种责任，是一种生活方式”的理念。倡导公众真正认识和了解理财。通过理财实现“全民收入倍增计划”。 引导公众对金融理财服务的重 新认识，以期将“海富通•第一财经首届最佳理财师评选”活动打造成为中国金融领域内最高规格和最具影响力的评选活动，为促进中国金融理财行业的发展而 助力。</string>
</resources>