<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <include
            android:id="@+id/public_top_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/public_layout_topbar" />
    </LinearLayout>


    <TableLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_list_two" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#5B5B5B"
                android:text="@string/reg_email" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reset_password_email_et"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="@string/reset_password_email_hit"
                android:textSize="14sp" 
                android:inputType="textEmailAddress">

                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_list_two" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#5B5B5B"
                android:text="@string/checkcode" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reset_password_checkcode_et"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="@string/email_checkcode_hit"
                android:textSize="14sp"
                android:inputType="text" >

            </EditText>
            
            <TextView
                android:id="@+id/reset_password_get_checkcode_txt"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:paddingRight="10dp"
                android:textColor="@drawable/orange2"
                android:text="@string/checkcode_get" />
            
        </TableRow>
        
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_list_two" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#5B5B5B"
                android:text="@string/password_new" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reset_password_password_et"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="@string/password_type"
                android:textSize="14sp"
                android:inputType="textPassword" >

            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_list" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#5B5B5B"
                android:text="@string/password_confirm" />

            <EditText
                android:layout_weight="1"
                android:id="@+id/reset_password_repassword_et"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="@string/repeat_input_password"
                android:textSize="14sp"
                android:inputType="textPassword" >

            </EditText>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:gravity="center" >

        <Button
            android:id="@+id/reset_password_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/btn_shape"
            android:text="@string/submit"
            android:minHeight="38dp"
            android:textColor="@color/text_white"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
