<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <include
            android:id="@+id/public_top_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/public_layout_topbar" />
    </LinearLayout>

    <TableLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_list_two" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#5B5B5B"
                android:text="@string/email_en" />

            <EditText
                android:id="@+id/register_email_et"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="@string/register_email_hit"
                android:inputType="textEmailAddress" 
                android:textSize="16sp"
                />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_list_two" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:textColor="#5B5B5B"
                android:text="@string/password" />

            <EditText
                android:id="@+id/register_password_et"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="@string/password_type"
                android:inputType="textPassword"
                android:text="16sp"
                 >
                
                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_layout_list" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/password_confirm"
                android:textColor="#5B5B5B"
                 />

            <EditText
                android:id="@+id/register_repassword_et"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:ems="10"
                android:hint="@string/repeat_input_password"
                android:inputType="textPassword" 
                android:textSize="16sp"
                >

                <requestFocus />
            </EditText>
        </TableRow>
    </TableLayout>

    <Button
        android:layout_marginTop="10dip"
        android:id="@+id/submit_bottom_btn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/btn_shape"
        android:gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:text="提交"
        android:textSize="20sp"
        
        android:textColor="@android:color/white" />
</LinearLayout>