<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" 
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <include
            android:id="@+id/public_top_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/public_layout_topbar" />
    </LinearLayout>
    
    <TableLayout
        android:layout_marginTop="10dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:background="@drawable/btn_layout_list_two" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:textColor="#5B5B5B"
                android:paddingLeft="10dp"
                android:textSize="18sp"
                android:text="@string/password_old" />

            <EditText
                android:id="@+id/password_old_et"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                  android:textSize="15sp"
                  android:gravity="left"
                android:textColor="#5B5B5B"
                android:ems="10"
                android:hint="@string/your_current_password_hit" 
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:background="@drawable/btn_layout_list_two" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                 android:textSize="18sp"
                android:textColor="#5B5B5B"
                android:text="@string/password_new" />

            <EditText
                android:id="@+id/password_new_et"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                 android:textSize="15sp"
                android:ems="10"
                android:hint="@string/password_type"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:background="@drawable/btn_layout_list" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#5B5B5B"
                 android:textSize="18sp"
                android:layout_gravity="left|center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/password_confirm" />

            <EditText
                android:id="@+id/password_confirm_et"
                android:layout_height="wrap_content"
                android:background="@drawable/input_shape"
                android:textSize="15sp"
                android:ems="10"
                android:hint="@string/repeat_input_password"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>
        </TableRow>
    </TableLayout>
    
     <Button
        android:layout_marginTop="15dip"
        android:id="@+id/changepwd"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/btn_shape"
        android:gravity="center"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:textSize="20sp"
        android:text="提交"
        android:textColor="@android:color/white" />
    
    
</LinearLayout>
