<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/gray"
    android:orientation="vertical">
     <!-- 可以滚动查看页面所有内容 -->
     <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
        
	    <include
	        android:id="@+id/public_top_bar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        layout="@layout/public_layout_topbar" />

    </LinearLayout>

    <TextView
        android:id="@+id/choose_intro_first_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:textColor="@drawable/orange2"
        android:text="@string/choose_intro_background" />
    
    <TextView
        android:id="@+id/choose_intro_first_content_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:background="@color/text_white"
        android:text="@string/choose_intro_background_content" />
	
    <TextView
        android:id="@+id/choose_intro_second_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:textColor="@drawable/orange2"
        android:text="@string/choose_intro_target" />
    
    <TextView
        android:id="@+id/choose_intro_second_content_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="16sp"
        android:background="@color/text_white"
        android:text="@string/choose_intro_target_content" />
    </LinearLayout>
</ScrollView>
</LinearLayout>
