<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@color/text_white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
        
	    <include
	        android:id="@+id/public_top_bar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        layout="@layout/public_layout_topbar" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="top"
        android:layout_marginTop="20dip"
        android:layout_marginRight="5dip"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="5dip"
        android:orientation="vertical" >
	    
	    <TextView
	        android:id="@+id/aboutus_title_txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/other_contact_title" 
	        android:textColor="#5B5B5B"
	        />
        
	     <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_gravity="top"
	        android:gravity="top"
        	android:layout_marginTop="10dip"
    		android:background="@color/gray"
       		android:orientation="vertical" >

	         <EditText
	             android:id="@+id/contact_email_txt"
	             android:layout_marginTop="10dip"
	             android:textSize="14sp"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:background="@drawable/shape"
	             android:hint="@string/other_contact_email_hit"
	             android:ems="10"
	             android:inputType="textEmailAddress" >

	             <requestFocus />
	         </EditText>

	         <EditText
	             android:id="@+id/contact_description_txt"
	             android:layout_marginTop="10dip"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:textSize="14sp"
	             android:ems="10"
	             android:lines="8"
	             android:singleLine="false"
	             android:gravity="top"
	             android:layout_gravity="top"
	             android:background="@drawable/shape"
	             android:hint="@string/other_contact_description_hit"
	             android:inputType="textMultiLine" />

	         <LinearLayout 
	             android:layout_marginTop="10dip"
	             android:layout_width="match_parent"
	             android:layout_height="wrap_content"
	             android:layout_gravity="center"
	             android:gravity="center">
	             
	        	<Button
	        	    android:id="@+id/contact_send_btn"
		             android:background="@drawable/btn_shape"
		             android:layout_width="fill_parent"
		             android:layout_marginLeft="5dip"
		             android:layout_marginRight="5dip"
		             android:textColor="@color/text_white"
		             android:textSize="20sp"
		             android:layout_height="50dp"
		             android:text="@string/other_contact_send" />
	             
	         </LinearLayout>
	         
	     </LinearLayout>
        
    </LinearLayout>

</LinearLayout>
